--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@
 
 # Exceptions: (include these!)
 !Demo_NewYork/Data/input/**
+!renv.lock
+!.Rprofile
+!renv/settings.json
+!renv/activate.R
 
 # Specific files:
 Demo_NewYork/Data/input/MRC_consensus_BirdTree.tre
@@ -35,3 +39,4 @@ Demo_NewYork/Data/input/AVONET Supplementary dataset 1.xlsx
 /Git/Data/input/species_ranges_tiff
 /Data/input/shp_global
 /Data/input/shp_introduced
+/renv/
