--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 Demo_NewYork/Data/input/MRC_consensus_BirdTree.tre
 Data/input/MRC_consensus_BirdTree.tre
 Demo_NewYork/Data/input/AVONET Supplementary dataset 1.xlsx
+README.qmd
 
 
 # Folders
