--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ Demo_NewYork/Data/input/MRC_consensus_BirdTree.tre
 Data/input/MRC_consensus_BirdTree.tre
 Demo_NewYork/Data/input/AVONET Supplementary dataset 1.xlsx
 README.qmd
+Project_Description.qmd
 
 
 # Folders
